refactored data package to have a exchange methods
