# product-api/main.go
@@ -2,7 +2,6 @@ package main
 
 import (
 	"context"
-	"log"
 	"net/http"
 	"os"
 	"os/signal"
@@ -15,11 +14,12 @@ import (
 	"github.com/go-openapi/runtime/middleware"
 	gohandlers "github.com/gorilla/handlers"
 	"github.com/gorilla/mux"
+	"github.com/hashicorp/go-hclog"
 	"google.golang.org/grpc"
 )
 
 func main() {
-	l := log.New(os.Stdout, "product-api", log.LstdFlags)
+	l := hclog.Default()
 	v := data.NewValidation()
 
 	// define a grpc connection
@@ -32,8 +32,9 @@ func main() {
 
 	// create a grpc client for currency service
 	cc := protos.NewCurrencyClient(conn)
+	db := data.NewProductDB(cc, l)
 
-	ph := handlers.NewProducts(l, v, cc)
+	ph := handlers.NewProducts(l, v, db)
 
 	/*
 		servemux stands for Http request multiplexer
@@ -47,7 +48,10 @@ func main() {
 
 	// defining method specific subrouters
 	getR := sm.Methods(http.MethodGet).Subrouter()
+	getR.HandleFunc("/products", ph.ListAll).Queries("currency", "{[A-Z]{3}]}")
 	getR.HandleFunc("/products", ph.ListAll)
+
+	getR.HandleFunc("/products/{id:[0-9]+}", ph.ListSingle).Queries("currency", "{[A-Z]{3}]}")
 	getR.HandleFunc("/products/{id:[0-9]+}", ph.ListSingle)
 
 	putRouter := sm.Methods(http.MethodPut).Subrouter()
@@ -72,20 +76,23 @@ func main() {
 
 	//Defining server struct
 	s := &http.Server{
-		Addr:         ":9090",           //address of the server to run on
-		Handler:      ch(sm),            //specify handler
-		IdleTimeout:  120 * time.Second, //timeout for the tcp connections to stay idle
-		ReadTimeout:  1 * time.Second,   //max read time
-		WriteTimeout: 1 * time.Second,   //max write time
+		Addr:         ":9090",                                          //address of the server to run on
+		Handler:      ch(sm),                                           //specify handler
+		ErrorLog:     l.StandardLogger(&hclog.StandardLoggerOptions{}), // sett the logger for the server
+		IdleTimeout:  120 * time.Second,                                //timeout for the tcp connections to stay idle
+		ReadTimeout:  1 * time.Second,                                  //max read time
+		WriteTimeout: 1 * time.Second,                                  //max write time
 	}
 
 	/*
 		starting a webserver with a goroutine so that it can be gracefully shutdown
 	*/
 	go func() {
+		l.Info("Starting server on port 9090")
 		err := s.ListenAndServe()
 		if err != nil {
-			l.Fatal(err)
+			l.Error("Error starting server", "error", err)
+			os.Exit(1)
 		}
 	}()
 
@@ -97,7 +104,7 @@ func main() {
 	signal.Notify(sigChan, os.Interrupt, syscall.SIGTERM)
 
 	sig := <-sigChan
-	l.Println("Received terminate, graceful shutdown", sig)
+	l.Info("Received terminate, graceful shutdown", sig)
 
 	/*
 		contexts are used to control the progress of the http requests being handled in a goroutine
